[package]
name = "kvs"
version = "0.1.0"
authors = ["Sriharsha Mucheli <harshasrisri@gmail.com>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.11"
failure = "0.1.7"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.4"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false

[[bin]]
name = "kvs"
test = false
doctest = false
